add comment rules
