# post-service/internal/handler/generated/post_core/v1/post_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.4.0
+// - protoc-gen-go-grpc v1.5.1
 // - protoc             (unknown)
 // source: post_core/v1/post.proto
 
@@ -15,16 +15,20 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.62.0 or later.
-const _ = grpc.SupportPackageIsVersion8
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
 
 const (
-	PostService_CreatePost_FullMethodName    = "/post.v1.PostService/CreatePost"
-	PostService_GetPost_FullMethodName       = "/post.v1.PostService/GetPost"
-	PostService_CreateComment_FullMethodName = "/post.v1.PostService/CreateComment"
-	PostService_GetComment_FullMethodName    = "/post.v1.PostService/GetComment"
-	PostService_LikeAction_FullMethodName    = "/post.v1.PostService/LikeAction"
-	PostService_Getlike_FullMethodName       = "/post.v1.PostService/Getlike"
+	PostService_CreatePost_FullMethodName         = "/post.v1.PostService/CreatePost"
+	PostService_GetPost_FullMethodName            = "/post.v1.PostService/GetPost"
+	PostService_CreateComment_FullMethodName      = "/post.v1.PostService/CreateComment"
+	PostService_GetComment_FullMethodName         = "/post.v1.PostService/GetComment"
+	PostService_CreateCommentRule_FullMethodName  = "/post.v1.PostService/CreateCommentRule"
+	PostService_GetCommentRules_FullMethodName    = "/post.v1.PostService/GetCommentRules"
+	PostService_GetCommentRuleById_FullMethodName = "/post.v1.PostService/GetCommentRuleById"
+	PostService_UpdateCommentRule_FullMethodName  = "/post.v1.PostService/UpdateCommentRule"
+	PostService_LikeAction_FullMethodName         = "/post.v1.PostService/LikeAction"
+	PostService_Getlike_FullMethodName            = "/post.v1.PostService/Getlike"
 )
 
 // PostServiceClient is the client API for PostService service.
@@ -37,6 +41,10 @@ type PostServiceClient interface {
 	// comment
 	CreateComment(ctx context.Context, in *CreateCommentRequest, opts ...grpc.CallOption) (*CreateCommentResponse, error)
 	GetComment(ctx context.Context, in *GetCommentRequest, opts ...grpc.CallOption) (*GetCommentResponse, error)
+	CreateCommentRule(ctx context.Context, in *CreateCommentRuleRequest, opts ...grpc.CallOption) (*CreateCommentRuleResponse, error)
+	GetCommentRules(ctx context.Context, in *GetCommentRulesRequest, opts ...grpc.CallOption) (*GetCommentRulesResponse, error)
+	GetCommentRuleById(ctx context.Context, in *GetCommentRuleByIdRequest, opts ...grpc.CallOption) (*GetCommentRuleByIdResponse, error)
+	UpdateCommentRule(ctx context.Context, in *UpdateCommentRuleRequest, opts ...grpc.CallOption) (*UpdateCommentRuleResponse, error)
 	// like
 	LikeAction(ctx context.Context, in *LikeRequest, opts ...grpc.CallOption) (*LikeResponse, error)
 	Getlike(ctx context.Context, in *GetLikeRequest, opts ...grpc.CallOption) (*GetLikeResponse, error)
@@ -90,6 +98,46 @@ func (c *postServiceClient) GetComment(ctx context.Context, in *GetCommentReques
 	return out, nil
 }
 
+func (c *postServiceClient) CreateCommentRule(ctx context.Context, in *CreateCommentRuleRequest, opts ...grpc.CallOption) (*CreateCommentRuleResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateCommentRuleResponse)
+	err := c.cc.Invoke(ctx, PostService_CreateCommentRule_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *postServiceClient) GetCommentRules(ctx context.Context, in *GetCommentRulesRequest, opts ...grpc.CallOption) (*GetCommentRulesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetCommentRulesResponse)
+	err := c.cc.Invoke(ctx, PostService_GetCommentRules_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *postServiceClient) GetCommentRuleById(ctx context.Context, in *GetCommentRuleByIdRequest, opts ...grpc.CallOption) (*GetCommentRuleByIdResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetCommentRuleByIdResponse)
+	err := c.cc.Invoke(ctx, PostService_GetCommentRuleById_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *postServiceClient) UpdateCommentRule(ctx context.Context, in *UpdateCommentRuleRequest, opts ...grpc.CallOption) (*UpdateCommentRuleResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateCommentRuleResponse)
+	err := c.cc.Invoke(ctx, PostService_UpdateCommentRule_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *postServiceClient) LikeAction(ctx context.Context, in *LikeRequest, opts ...grpc.CallOption) (*LikeResponse, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(LikeResponse)
@@ -112,7 +160,7 @@ func (c *postServiceClient) Getlike(ctx context.Context, in *GetLikeRequest, opt
 
 // PostServiceServer is the server API for PostService service.
 // All implementations must embed UnimplementedPostServiceServer
-// for forward compatibility
+// for forward compatibility.
 type PostServiceServer interface {
 	// post
 	CreatePost(context.Context, *CreatePostRequest) (*CreatePostResponse, error)
@@ -120,15 +168,22 @@ type PostServiceServer interface {
 	// comment
 	CreateComment(context.Context, *CreateCommentRequest) (*CreateCommentResponse, error)
 	GetComment(context.Context, *GetCommentRequest) (*GetCommentResponse, error)
+	CreateCommentRule(context.Context, *CreateCommentRuleRequest) (*CreateCommentRuleResponse, error)
+	GetCommentRules(context.Context, *GetCommentRulesRequest) (*GetCommentRulesResponse, error)
+	GetCommentRuleById(context.Context, *GetCommentRuleByIdRequest) (*GetCommentRuleByIdResponse, error)
+	UpdateCommentRule(context.Context, *UpdateCommentRuleRequest) (*UpdateCommentRuleResponse, error)
 	// like
 	LikeAction(context.Context, *LikeRequest) (*LikeResponse, error)
 	Getlike(context.Context, *GetLikeRequest) (*GetLikeResponse, error)
 	mustEmbedUnimplementedPostServiceServer()
 }
 
-// UnimplementedPostServiceServer must be embedded to have forward compatible implementations.
-type UnimplementedPostServiceServer struct {
-}
+// UnimplementedPostServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedPostServiceServer struct{}
 
 func (UnimplementedPostServiceServer) CreatePost(context.Context, *CreatePostRequest) (*CreatePostResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreatePost not implemented")
@@ -142,6 +197,18 @@ func (UnimplementedPostServiceServer) CreateComment(context.Context, *CreateComm
 func (UnimplementedPostServiceServer) GetComment(context.Context, *GetCommentRequest) (*GetCommentResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetComment not implemented")
 }
+func (UnimplementedPostServiceServer) CreateCommentRule(context.Context, *CreateCommentRuleRequest) (*CreateCommentRuleResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateCommentRule not implemented")
+}
+func (UnimplementedPostServiceServer) GetCommentRules(context.Context, *GetCommentRulesRequest) (*GetCommentRulesResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetCommentRules not implemented")
+}
+func (UnimplementedPostServiceServer) GetCommentRuleById(context.Context, *GetCommentRuleByIdRequest) (*GetCommentRuleByIdResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetCommentRuleById not implemented")
+}
+func (UnimplementedPostServiceServer) UpdateCommentRule(context.Context, *UpdateCommentRuleRequest) (*UpdateCommentRuleResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateCommentRule not implemented")
+}
 func (UnimplementedPostServiceServer) LikeAction(context.Context, *LikeRequest) (*LikeResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method LikeAction not implemented")
 }
@@ -149,6 +216,7 @@ func (UnimplementedPostServiceServer) Getlike(context.Context, *GetLikeRequest) 
 	return nil, status.Errorf(codes.Unimplemented, "method Getlike not implemented")
 }
 func (UnimplementedPostServiceServer) mustEmbedUnimplementedPostServiceServer() {}
+func (UnimplementedPostServiceServer) testEmbeddedByValue()                     {}
 
 // UnsafePostServiceServer may be embedded to opt out of forward compatibility for this service.
 // Use of this interface is not recommended, as added methods to PostServiceServer will
@@ -158,6 +226,13 @@ type UnsafePostServiceServer interface {
 }
 
 func RegisterPostServiceServer(s grpc.ServiceRegistrar, srv PostServiceServer) {
+	// If the following call pancis, it indicates UnimplementedPostServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
 	s.RegisterService(&PostService_ServiceDesc, srv)
 }
 
@@ -233,6 +308,78 @@ func _PostService_GetComment_Handler(srv interface{}, ctx context.Context, dec f
 	return interceptor(ctx, in, info, handler)
 }
 
+func _PostService_CreateCommentRule_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateCommentRuleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PostServiceServer).CreateCommentRule(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: PostService_CreateCommentRule_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PostServiceServer).CreateCommentRule(ctx, req.(*CreateCommentRuleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _PostService_GetCommentRules_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetCommentRulesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PostServiceServer).GetCommentRules(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: PostService_GetCommentRules_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PostServiceServer).GetCommentRules(ctx, req.(*GetCommentRulesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _PostService_GetCommentRuleById_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetCommentRuleByIdRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PostServiceServer).GetCommentRuleById(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: PostService_GetCommentRuleById_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PostServiceServer).GetCommentRuleById(ctx, req.(*GetCommentRuleByIdRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _PostService_UpdateCommentRule_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateCommentRuleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PostServiceServer).UpdateCommentRule(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: PostService_UpdateCommentRule_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PostServiceServer).UpdateCommentRule(ctx, req.(*UpdateCommentRuleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _PostService_LikeAction_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(LikeRequest)
 	if err := dec(in); err != nil {
@@ -291,6 +438,22 @@ var PostService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetComment",
 			Handler:    _PostService_GetComment_Handler,
+		},
+		{
+			MethodName: "CreateCommentRule",
+			Handler:    _PostService_CreateCommentRule_Handler,
+		},
+		{
+			MethodName: "GetCommentRules",
+			Handler:    _PostService_GetCommentRules_Handler,
+		},
+		{
+			MethodName: "GetCommentRuleById",
+			Handler:    _PostService_GetCommentRuleById_Handler,
+		},
+		{
+			MethodName: "UpdateCommentRule",
+			Handler:    _PostService_UpdateCommentRule_Handler,
 		},
 		{
 			MethodName: "LikeAction",
